# flask_app

./: .gitignore  Dockerfile  Procfile  README.md  app.db  boot.sh  config.py  docker-compose.yml  flask_app.py  pyproject.toml  tests.py
app/: __init__.py  email.py  forms.py  models.py  routes.py  search.py  tasks.py
app/api/: users.py
app/auth/: forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/templates/: 404.html  _post.html  base.html  index.html  login.html  user.html  user_popup.html
app/templates/email/: export_posts.html  export_posts.txt
migrations/versions/: 34bde1bcc491_user_and_post_table.py  395a36c54981_followers.py  43ac69fb5af9_tasks.py  78d2196efd8a_post_table.py  7c91e1ce12a3_direct_messages.py  9ad3d08b79a0_add_about_me_and_last_seen_to_user_model.py  a55c04816452_user_tokens.py  bbaf38de4dec_notifications.py
