[tool.poetry]
name = "flask_app"
version = "0.1.0"
description = ""
authors = ["kuznetsov-m"]

[tool.poetry.dependencies]
python = "^3.9.12"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.0"
Flask-WTF = "^1.0.1"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.20.0"
WTForms = "^3.0.1"
email-validator = "^1.1.3"
Flask-Bootstrap = "^3.3.7"
Flask-Moment = "^1.0.2"
elasticsearch = "6.3.0"
gunicorn = "^20.1.0"
certifi = "^2021.10.8"
psycopg2 = "^2.9.3"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
